[project]
name = "agentserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.11",
    "litellm>=1.63.11",
    "markdownify>=1.1.0",
    "mongomock>=4.3.0",
    "ollama>=0.4.7",
    "pymilvus>=2.5.5",
    "python-dotenv>=1.0.1",
    "selenium>=4.29.0",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
]
